--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
         <div class="header_info">
             <i class="fa fa-search"></i>
-            <a class="card" href="pages/cart/cart.html">
-                <p class="card-item">0</p>
+            <a class="cart" href="pages/cart/cart.html">
+                <p class="cart-item">0</p>
                 <i class="fa fa-shopping-bag"></i>
             </a>
             <a class="header_account" href="pages/authenticate/login-signup.html">
