--- a/index.html
+++ b/index.html
@@ -62,56 +62,6 @@
                 <a href="pages/details/detail.html" class="btn">View</a>
             </div>
         </div>
-        <div class="product-item">
-            <img src="assets/image/tempo.jpg" alt="">
-            <div class="product-info">
-                <h3>Tempo 10 pro</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam labore asperiores quae quia
-                    consequuntur voluptate, repudiandae nihil recusandae, cum ab beatae aspernatur soluta, corporis
-                    reprehenderit ad eos aut vitae voluptatem.</p>
-                <a href="#" class="btn">View</a>
-            </div>
-        </div>
-        <div class="product-item">
-            <img src="assets/image/tempo.jpg" alt="">
-            <div class="product-info">
-                <h3>Tempo 10 pro</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam labore asperiores quae quia
-                    consequuntur voluptate, repudiandae nihil recusandae, cum ab beatae aspernatur soluta, corporis
-                    reprehenderit ad eos aut vitae voluptatem.</p>
-                <a href="#" class="btn">View</a>
-            </div>
-        </div>
-        <div class="product-item">
-            <img src="assets/image/tempo.jpg" alt="">
-            <div class="product-info">
-                <h3>Tempo 10 pro</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam labore asperiores quae quia
-                    consequuntur voluptate, repudiandae nihil recusandae, cum ab beatae aspernatur soluta, corporis
-                    reprehenderit ad eos aut vitae voluptatem.</p>
-                <a href="pages/details/detail.html" class="btn">View</a>
-            </div>
-        </div>
-        <div class="product-item">
-            <img src="assets/image/tempo.jpg" alt="">
-            <div class="product-info">
-                <h3>Tempo 10 pro</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam labore asperiores quae quia
-                    consequuntur voluptate, repudiandae nihil recusandae, cum ab beatae aspernatur soluta, corporis
-                    reprehenderit ad eos aut vitae voluptatem.</p>
-                <a href="#" class="btn">View</a>
-            </div>
-        </div>
-        <div class="product-item">
-            <img src="assets/image/tempo.jpg" alt="">
-            <div class="product-info">
-                <h3>Tempo 10 pro</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam labore asperiores quae quia
-                    consequuntur voluptate, repudiandae nihil recusandae, cum ab beatae aspernatur soluta, corporis
-                    reprehenderit ad eos aut vitae voluptatem.</p>
-                <a href="#" class="btn">View</a>
-            </div>
-        </div>
     </section>
 
     <!-- FOOTER -->
@@ -121,6 +71,7 @@
         </div>
     </footer>
 
+    <script src="js/detail.js"></script>
     <script src="/js/main.js"></script>
 </body>
 
