--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -104,6 +104,8 @@
                     href="https://www.facebook.com/iamnguyenlecuong/">Nguyen Le Cuong</a> </p>
         </div>
     </footer>
+
+    <script src="/js/detail.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/cart.js"></script>
 </body>
