--- a/pages/authenticate/login-signup.html
+++ b/pages/authenticate/login-signup.html
@@ -41,7 +41,7 @@
         <div class="header_info">
             <i class="fa fa-search"></i>
             <a class="cart" href="/pages/authenticate/login-signup.html">
-                <p class="cart-item">0</p>
+                <!-- <p class="cart-item">0</p> -->
                 <i class="fa fa-shopping-bag"></i>
             </a>
             <a class="header_account" href="/pages/authenticate/login-signup.html">
