--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -42,7 +42,7 @@
         <div class="header_info">
             <i class="fa fa-search"></i>
             <a class="cart" href="/pages/cart/cart.html">
-                <p class="cart-item">0</p>
+                <!-- <p class="cart-item">0</p> -->
                 <i class="fa fa-shopping-bag"></i>
             </a>
             <a class="header_account" href="/pages/authenticate/login-signup.html">
@@ -85,6 +85,7 @@
             <div class="product-checkout">
                 <a href="/pages/checkout/checkout.html" class="checkout">Checkout</a>
             </div>
+            
             <button class="remove-all">Clear product</button>
         </div>
     </div>
@@ -104,10 +105,12 @@
                     href="https://www.facebook.com/iamnguyenlecuong/">Nguyen Le Cuong</a> </p>
         </div>
     </footer>
-
+    
     <script src="/js/detail.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/cart.js"></script>
+    <!-- script extend -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
