--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <div class="header_info">
             <i class="fa fa-search"></i>
             <a class="cart" href="pages/cart/cart.html">
-                <p class="cart-item">0</p>
+                <!-- <p class="cart-item">0</p> -->
                 <i class="fa fa-shopping-bag"></i>
             </a>
             <a class="header_account" href="pages/authenticate/login-signup.html">
                 <i class="fa fa-user-alt"></i>
                 <p id="acountname">Login</p>
             </a>
-            <i class="fa fa-sign-out-alt" onclick="logout()"></i>
+            <!-- <i class="fa fa-sign-out-alt" onclick="logout()"></i> -->
         </div>
 
     </header>
