--- a/pages/checkout/checkout.html
+++ b/pages/checkout/checkout.html
@@ -43,14 +43,14 @@
         <div class="header_info">
             <i class="fa fa-search"></i>
             <a class="cart" href="/pages/cart/cart.html">
-                <p class="cart-item">0</p>
+                <!-- <p class="cart-item">0</p> -->
                 <i class="fa fa-shopping-bag"></i>
             </a>
             <a class="header_account" href="/pages/authenticate/login-signup.html">
                 <i class="fa fa-user-alt"></i>
                 <p id="acountname">Login</p>
             </a>
-            <i class="fa fa-sign-out-alt" onclick="logout()"></i>
+            <!-- <i class="fa fa-sign-out-alt" onclick="logout()"></i> -->
         </div>
 
     </header>
@@ -61,7 +61,7 @@
         <a href="/index.html" class="btn">Continuous to shopping</a>
      </div>
 
-
+    
     <script src="/js/main.js"></script>
 </body>
 
