--- a/pages/details/detail.html
+++ b/pages/details/detail.html
@@ -41,10 +41,10 @@
         <div class="header_info">
             <i class="fa fa-search"></i>
             <a class="cart" href="/pages/cart/cart.html">
-                <p class="cart-item">0</p>
+                <!-- <p class="cart-item">0</p> -->
                 <i class="fa fa-shopping-bag"></i>
             </a>
-            <a class="header_account" href="#">
+            <a class="header_account" href="/pages/authenticate/login-signup.html">
                 <i class="fa fa-user-alt"></i>
                 <p id="acountname">Login</p>
             </a>
@@ -82,6 +82,8 @@
 
     <script src="/js/main.js"></script>
     <script src="/js/detail.js"></script>
+    <!-- script extend -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
