--- a/pages/authenticate/login-signup.html
+++ b/pages/authenticate/login-signup.html
@@ -57,8 +57,8 @@
         <div class="container-forms">
             <div class="container-info">
                 <div class="info-item">
-                    <p>Have an account?</p>
-                    <button class="btn">Login</button>
+                    <p>Welcome Back!!!</p>
+                    <button class="btn">Sign in</button>
                 </div>
                 <div class="info-item">
                     <p>Don't have an account?</p>
